--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-<img src="https://www.pexels.com/photo/four-jet-plane-on-sky-733254/"
+<img src="https://images.pexels.com/photos/3758435/pexels-photo-3758435.jpeg"
     <meta charset="UTF-8" />
     <title>Naval Air Station Oceana</title>
 
