--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 
-<img src="https://images.pexels.com/photos/3758435/pexels-photo-3758435.jpeg"
+<img src="https://images.pexels.com/photos/3758435/pexels-photo-3758435.jpeg" width="1800" height="900">
     <meta charset="UTF-8" />
     <title>Naval Air Station Oceana</title>
 
