--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
 
-
+<head>
 <div class="navbar">
   <a class="active" href="#">Home</a>
   <a href="#visitors">Visitors</a>
   <a href="#contractors">Contractors</a>
   <a href="#events">Events</a>
 </div>
-
-
-
 
 <img src="https://images.pexels.com/photos/3758435/pexels-photo-3758435.jpeg" width="1800" height="900">
     <meta charset="UTF-8" />
@@ -23,8 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">
 
-
-  </head>
+</head>
 
 
 <main>
@@ -32,26 +27,26 @@
   <body class="naso" id="specificeID">
     <header>Naval Air Station Oceana Visitor Control Center</header>
     <h1>Contact Info:</h1>
-    <p>1450 Tomcat Blvd <br> Bldg 252 <br> Virginia Beach, VA <br> (757)-433-3212</p>
-
-  <h2>
+    <p>1450 Tomcat Blvd <br> Bldg 252 <br> Virginia Beach, VA <br>(757)-433-3212</p>
+  <h2>Hours Mon-Th 0600-1700 Fri 0600-1600</h2>
+  <h3>
     Directions From Interstate 64 East or West: <br>
     From64, take 264 East to First Colonial Road, Exit 21A, Proceed on First Colonial Road past Virginia Beach Blvd. First Colonial becomes Oceana Blvd for the next 4 miles. Tomcat Blvd will be on the right , which leads to the main gate. The Visitor Control Center is the first building on the right, in building 252.
-  </h2>
+  </h3>
 
 
-//image for map //
+
+<div id="root"></div>
+  <script src="index.js" type="module"></script>
+
 
 
 <footer>
 
 </footer>
 
+</body>
 
-
-
-  </body>
-
-  </main>
+</main>
 
 </html>
