--- a/index.html
+++ b/index.html
@@ -1,52 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-<div class="navbar">
-  <a class="active" href="#">Home</a>
-  <a href="#visitors">Visitors</a>
-  <a href="#contractors">Contractors</a>
-  <a href="#events">Events</a>
-</div>
-
-<img src="https://images.pexels.com/photos/3758435/pexels-photo-3758435.jpeg" width="1800" height="900">
+  <head>
     <meta charset="UTF-8" />
     <title>Naval Air Station Oceana</title>
-
-
     <link href="style.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">
-
-</head>
-
-
-<main>
-
-  <body class="naso" id="specificeID">
-    <header>Naval Air Station Oceana Visitor Control Center</header>
-    <h1>Contact Info:</h1>
-    <p>1450 Tomcat Blvd <br> Bldg 252 <br> Virginia Beach, VA <br>(757)-433-3212</p>
-  <h2>Hours Mon-Th 0600-1700 Fri 0600-1600</h2>
-  <h3>
-    Directions From Interstate 64 East or West: <br>
-    From64, take 264 East to First Colonial Road, Exit 21A, Proceed on First Colonial Road past Virginia Beach Blvd. First Colonial becomes Oceana Blvd for the next 4 miles. Tomcat Blvd will be on the right , which leads to the main gate. The Visitor Control Center is the first building on the right, in building 252.
-  </h3>
-
-
-
-<div id="root"></div>
-  <script src="index.js" type="module"></script>
-
-
-
-<footer>
-
-</footer>
-
-</body>
-
-</main>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="index.js" type="module"></script>
+  </body>
 </html>
